# sin

./: CMakeLists.txt  README.md  SinValue.cpp  sin.cpp  sin.h  sin_parser.cpp  sin_parser.h  sin_parser_impl.h  sin_value.cpp  sin_value.h  switch.h
test/: CMakeLists.txt  main.cpp  test_parser.cpp
